tests/miniJava/neg/005137_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java while int [] java ) { return 0 ; } }
